# parodactyl

./: docker-compose.yml  main.py  pyproject.toml
common/: states.py
common/utils/: base_directory.py  enums.py  nominatim.py  settings.py
parodactyl_bot/: bot_client.py
parodactyl_bot/cli/: start.py
parodactyl_bot/handlers/: telegram_handlers.py
parodactyl_bot/infra/database/: base_model.py  engine.py  settings.py  tables.py
parodactyl_bot/infra/migrations/: alembic.ini  env.py
parodactyl_bot/infra/migrations/versions/: 27d0222bdf0f_initial_migration.py
parodactyl_bot/keyboards/: telegram_keyboard.py
parodactyl_bot/middleware/: auth.py
parodactyl_bot/models/: user.py
parodactyl_bot/repository/: auth.py  user.py
parodactyl_bot/services/: auth.py  user.py
parodactyl_bot/telegram/: bot_commands.py
parodactyl_bot/telegram/handlers/: auth_handlers.py  menu_handlers.py  profile_settings_handlers.py  telegram_handlers.py
parodactyl_bot/telegram/keyboards/: auth_keyboard.py  menu_keyboard.py  profile_settings_keyboard.py  telegram_keyboard.py
