[project]
name = "parodactyl-bot"
version = "0.0.1"
description = "A bot for Telegram"
authors = [
    {name = "a.denisychev"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"

